<?xml version="1.0"?>
<package format="2">
  <name>autonomous-delivery-robot</name>
  <version>0.0.0</version>
  <description>The autonomous-delivery-robot package</description>

  <!-- Maintainer and license -->
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>TODO</license>

  <!-- Catkin build system -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!-- Run-time (exec) dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
